2003-08-04  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml:
	* doc/opannotate.1.in:
	* pp/opannotate.cpp:
	* pp/opannotate_options.cpp: remove --source-dir and --base-dir,
	  they're confusing and not useful in the current form

2003-08-03  John Levon  <levon@movementarian.org>

	* utils/opcontrol: avoid using ps, it's very slow with kallsyms

2003-08-03  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/op_bfd.cpp: c++ static function doesn't get a mangled name
	  in debug info (see gcc #11774). Try to recover through a not
	  completely reliable mechanism but better than ignoring the problem

2003-08-02  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opreport.cpp: minor: more consistency about function ordering

2003-08-02  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/profile.h:
	* libpp/profile.cpp: profile::sample_count() new to allow raw access
	  to samples count
	* pp/opreport.cpp: use above function to implement opreport (w/o -l
	  or --details options). opreport is roughly twice faster.

2003-08-02  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opreport.cpp: clarify multiple counter support

2003-08-01  John Levon  <levon@movementarian.org>

	* libregex/stl.pat.in: fix _List_iterator regex
	(from Phil)

2003-07-31  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/opannotate.cpp: output cpu type and cpu speed.

2003-07-30  John Levon  <levon@movementarian.org>

	* libpp/partition_files.cpp: remove some apparently
	dead code

2003-07-30  John Levon  <levon@movementarian.org>

	* events/i386.p4.unit_masks: make flame_uops value
	mandatory, Yuan.Lu@rrze.uni-erlangen.de does not
	see any events without setting the unit mask

2003-07-30  John Levon  <levon@movementarian.org>

	* libutil++/op_bfd.h:
	* libutil++/op_bfd.cpp: bfd_openr() keeps a copy of
	the passed in char * around, sickenly enough. Ensure lifetimes
	will always be correct by adding a filename data member to
	op_bfd

2003-07-29  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/op_header.h: